--- a/src/pages/estimate/estimate.html
+++ b/src/pages/estimate/estimate.html
@@ -12,7 +12,7 @@
   </ion-navbar>
   <ion-toolbar no-border-top [color]="isAndroid ? 'royal' : 'masters'">
     <ion-segment [(ngModel)]="category" [color]="'head'">
-      <ion-segment-button value="new-requests">
+        <ion-segment-button value="new-requests" (click)="retrieveUserInformation()">
         Price Check
       </ion-segment-button>
       <ion-segment-button value="all-my-requests" (click)="retrievePriceRequests('ORDER_PRICE_CHECK')">
@@ -518,11 +518,11 @@
                 <ion-label>{{displayINR(estimate.estimation.totalProductCost)}}</ion-label>
               </ion-item>
               <ion-item *ngIf="isToggledTax">
-                <ion-label color="selva">Tax 1</ion-label>
+                <ion-label color="selva">CGST</ion-label>
                 <ion-label>{{displayINR(estimate.estimation.totalTax1)}}</ion-label>
               </ion-item>
               <ion-item *ngIf="isToggledTax">
-                <ion-label color="selva">Tax 2</ion-label>
+                <ion-label color="selva">SGST</ion-label>
                 <ion-label>{{displayINR(estimate.estimation.totalTax2)}}</ion-label>
               </ion-item>
               <!-- <ion-item *ngIf="showTransportCost"> -->
