--- a/src/pages/estimate/estimation-details.html
+++ b/src/pages/estimate/estimation-details.html
@@ -193,9 +193,9 @@
                         <ion-col col-7>{{displayINR(row.order_TRANSPORT_COST)}}</ion-col>
                     </ion-row>
                     <ion-row>
-                        <ion-col col-5>Tax 1:</ion-col>
+                        <ion-col col-5>CGST:</ion-col>
                         <ion-col col-7>{{displayINR(row.order_TAX1)}} </ion-col>
-                        <ion-col col-5>Tax 2:</ion-col>
+                        <ion-col col-5>SGST:</ion-col>
                         <ion-col col-5> {{displayINR(row.order_TAX2)}}</ion-col>
                     </ion-row>
                 </ion-grid>
@@ -204,7 +204,7 @@
                     <h2>Unit(s): {{displayIndianNumber(row.unit_TYPE)}} Load: {{displayIndianNumber(row.unit)}}</h2>
                     <h3>Total Cost: {{displayINR(row.order_TOTAL_COST)}}</h3>
                     <p>Transport: {{displayINR(row.order_TRANSPORT_COST)}}</p>
-                    <p>Tax 1: {{displayINR(row.order_TAX1)}} Tax 2: {{displayINR(row.order_TAX2)}}</p>
+                    <p>CGST: {{displayINR(row.order_TAX1)}}SGST: {{displayINR(row.order_TAX2)}}</p>
                 </ion-list> -->
                 <!-- </ion-card> -->
             </div>
@@ -247,15 +247,15 @@
                                 <ion-col col-5> {{displayINR(item.order_TRANSPORT_COST)}}</ion-col>
                             </ion-row>
                             <ion-row>
-                                <ion-col col-5>Tax 1: {{displayINR(item.order_TAX1)}} </ion-col>
-                                <ion-col col-5> Tax 2: {{displayINR(item.order_TAX2)}}</ion-col>
+                                <ion-col col-5>CGST: {{displayINR(item.order_TAX1)}} </ion-col>
+                                <ion-col col-5>SGST: {{displayINR(item.order_TAX2)}}</ion-col>
                             </ion-row>
                         </ion-grid>
                         <!-- <ion-card>
                             <h2>Unit(s): {{displayIndianNumber(item.unit_TYPE)}} Load: {{displayIndianNumber(item.unit)}}</h2>
                             <h3>Total Cost: {{displayINR(item.order_TOTAL_COST)}}</h3>
                             <p>Transport: {{displayINR(item.order_TRANSPORT_COST)}}</p>
-                            <p>Tax 1: {{displayINR(item.order_TAX1)}} Tax 2: {{displayINR(item.order_TAX2)}}</p>
+                            <p>CGST: {{displayINR(item.order_TAX1)}}SGST: {{displayINR(item.order_TAX2)}}</p>
                         </ion-card> -->
                     </div>
                 </div>
@@ -278,11 +278,11 @@
 
                 <div *ngIf="order.taxable_STATUS == 'Yes'">
                     <ion-row>
-                        <ion-col col-5>Tax 1 :</ion-col>
+                        <ion-col col-5>CGST :</ion-col>
                         <ion-col col-7>{{displayINR(order.total_TAX1)}}</ion-col>
                     </ion-row>
                     <ion-row>
-                        <ion-col col-5>Tax 2 :</ion-col>
+                        <ion-col col-5>SGST :</ion-col>
                         <ion-col col-7>{{displayINR(order.total_TAX2)}}</ion-col>
                     </ion-row>
                 </div>
@@ -419,9 +419,9 @@
                         <ion-col col-7>{{displayINR(row.order_TRANSPORT_COST)}}</ion-col>
                     </ion-row>
                     <ion-row>
-                        <ion-col col-5>Tax 1:</ion-col>
+                        <ion-col col-5>CGST:</ion-col>
                         <ion-col col-7>{{displayINR(row.order_TAX1)}} </ion-col>
-                        <ion-col col-5>Tax 2:</ion-col>
+                        <ion-col col-5>SGST:</ion-col>
                         <ion-col col-5> {{displayINR(row.order_TAX2)}}</ion-col>
                     </ion-row>
                 </ion-grid>
@@ -430,7 +430,7 @@
                     <h2>Unit(s): {{displayIndianNumber(row.unit_TYPE)}} Load: {{displayIndianNumber(row.unit)}}</h2>
                     <h3>Total Cost: {{displayINR(row.order_TOTAL_COST)}}</h3>
                     <p>Transport: {{displayINR(row.order_TRANSPORT_COST)}}</p>
-                    <p>Tax 1: {{displayINR(row.order_TAX1)}} Tax 2: {{displayINR(row.order_TAX2)}}</p>
+                    <p>CGST: {{displayINR(row.order_TAX1)}}SGST: {{displayINR(row.order_TAX2)}}</p>
                 </ion-list> -->
                 <!-- </ion-card> -->
             </div>
@@ -473,15 +473,15 @@
                                 <ion-col col-5> {{displayINR(item.order_TRANSPORT_COST)}}</ion-col>
                             </ion-row>
                             <ion-row>
-                                <ion-col col-5>Tax 1: {{displayINR(item.order_TAX1)}} </ion-col>
-                                <ion-col col-5> Tax 2: {{displayINR(item.order_TAX2)}}</ion-col>
+                                <ion-col col-5>CGST: {{displayINR(item.order_TAX1)}} </ion-col>
+                                <ion-col col-5>SGST: {{displayINR(item.order_TAX2)}}</ion-col>
                             </ion-row>
                         </ion-grid>
                         <!-- <ion-card>
                             <h2>Unit(s): {{displayIndianNumber(item.unit_TYPE)}} Load: {{displayIndianNumber(item.unit)}}</h2>
                             <h3>Total Cost: {{displayINR(item.order_TOTAL_COST)}}</h3>
                             <p>Transport: {{displayINR(item.order_TRANSPORT_COST)}}</p>
-                            <p>Tax 1: {{displayINR(item.order_TAX1)}} Tax 2: {{displayINR(item.order_TAX2)}}</p>
+                            <p>CGST: {{displayINR(item.order_TAX1)}}SGST: {{displayINR(item.order_TAX2)}}</p>
                         </ion-card> -->
                     </div>
                 </div>
@@ -504,11 +504,11 @@
 
                 <div *ngIf="order.taxable_STATUS == 'Yes'">
                     <ion-row>
-                        <ion-col col-5>Tax 1 :</ion-col>
+                        <ion-col col-5>CGST :</ion-col>
                         <ion-col col-7>{{displayINR(order.total_TAX1)}}</ion-col>
                     </ion-row>
                     <ion-row>
-                        <ion-col col-5>Tax 2 :</ion-col>
+                        <ion-col col-5>SGST :</ion-col>
                         <ion-col col-7>{{displayINR(order.total_TAX2)}}</ion-col>
                     </ion-row>
                 </div>
@@ -943,11 +943,11 @@
                             <ion-label>{{displayINR(order.estimation.product.product_COST)}}</ion-label>
                         </ion-item>
                         <ion-item *ngIf="isToggledTax">
-                            <ion-label color="selva">Tax 1</ion-label>
+                            <ion-label color="selva">CGST</ion-label>
                             <ion-label>{{displayINR(order.estimation.totalTax1)}}</ion-label>
                         </ion-item>
                         <ion-item *ngIf="isToggledTax">
-                            <ion-label color="selva">Tax 2</ion-label>
+                            <ion-label color="selva">SGST</ion-label>
                             <ion-label>{{displayINR(order.estimation.totalTax2)}}</ion-label>
                         </ion-item>
                         <ion-item *ngIf="showTransportCost">
@@ -1456,11 +1456,11 @@
                         <!-- <ion-label>{{displayINR(order.estimation.product.product_COST)}}</ion-label> -->
                         <!-- </ion-item> -->
                         <ion-item *ngIf="isToggledTax">
-                            <ion-label color="selva">Tax 1</ion-label>
+                            <ion-label color="selva">CGST</ion-label>
                             <ion-label>{{displayINR(order.estimation.totalTax1)}}</ion-label>
                         </ion-item>
                         <ion-item *ngIf="isToggledTax">
-                            <ion-label color="selva">Tax 2</ion-label>
+                            <ion-label color="selva">SGST</ion-label>
                             <ion-label>{{displayINR(order.estimation.totalTax2)}}</ion-label>
                         </ion-item>
                         <ion-item *ngIf="showTransportCost">
