--- a/src/pages/lead/customer-meetings.html
+++ b/src/pages/lead/customer-meetings.html
@@ -22,6 +22,12 @@
                     </ion-col>
                 </ion-row>
                 <ion-row text-wrap>
+                    <ion-col col-5>Site Name:</ion-col>
+                    <ion-col col-7>
+                        <h3>{{ item.siteName}}</h3>
+                    </ion-col>
+                </ion-row>
+                <ion-row text-wrap>
                     <ion-col col-5>Purpose of Visit:</ion-col>
                     <ion-col col-7>
                         <h3>{{ item.purposeOfVisit}}</h3>
@@ -72,6 +78,12 @@
         </div>
     </div>
     <div *ngIf="option_type=='add_meeting'">
+        <ion-item>
+            <ion-label color="selva" floating>Site</ion-label>
+            <ion-select [(ngModel)]="new_meeting.siteId" name="siteId">
+                <ion-option *ngFor="let site of sites" [value]="site.site_ID" required>{{site.site_NAME}}</ion-option>
+            </ion-select>
+        </ion-item>
         <ion-item>
             <ion-label color="selva" floating>Purpose of Visit</ion-label>
             <ion-select [(ngModel)]="new_meeting.purposeOfVisit" name="purposeOfVisit" [compareWith]="">
